--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,10 @@ dependencies:
   loading_indicator: ^3.0.2
   dotted_border: ^2.0.0+1
   iconsax: ^0.0.8
-  file_picker: ^4.1.6
+  image_picker: ^0.8.4+1
   dio: ^4.0.0
+  path: ^1.8.0
+  pretty_dio_logger: ^1.1.1
 
 dev_dependencies:
   flutter_test:
